jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: kube-system
  annotations:
    traefik.frontend.rule.type: PathPrefix
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: k8s.bb-app.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: http
        path: /jenkins
  tls:
  - secretName: k8s.bb-app.cn-tls
    hosts:
    - k8s.bb-app.cn
